--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -12,13 +12,13 @@ category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 
-executable live-profile-server
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  default-language:    Haskell2010
-  build-depends:
-      base >= 4.7 && < 5
-    , live-profile-server-backend
+Flag dev
+    Description:   Turn on development settings, like auto-reload templates.
+    Default:       False
+
+Flag library-only
+    Description:   Build for use with "yesod devel"
+    Default:       False
 
 library
   hs-source-dirs:      src
@@ -55,3 +55,45 @@ library
     TypeFamilies
     TypeOperators
     TypeSynonymInstances
+
+  if flag(dev) || flag(library-only)
+    cpp-options:   -DDEVELOPMENT
+    ghc-options:   -Wall -fwarn-tabs -O0
+  else
+    ghc-options:   -Wall -fwarn-tabs -O2
+
+executable live-profile-server
+  hs-source-dirs:      app
+  main-is:             Main.hs
+  default-language:    Haskell2010
+  build-depends:
+      base >= 4.7 && < 5
+    , live-profile-server-backend
+
+test-suite live-profile-test
+  type:              exitcode-stdio-1.0
+  main-is:           Spec.hs
+  -- other-modules:     
+  hs-source-dirs:    test
+  ghc-options:       -Wall
+  default-language:  Haskell2010
+
+  default-extensions:
+    DataKinds
+    DeriveGeneric
+    FlexibleInstances
+    GeneralizedNewtypeDeriving
+    KindSignatures
+    OverloadedStrings
+    RankNTypes
+    RecordWildCards
+    ScopedTypeVariables
+    TemplateHaskell
+    TypeFamilies
+    TypeOperators
+    TypeSynonymInstances
+
+  build-depends: 
+      base
+    , live-profile-server-backend
+    , hspec >= 2.2
