Add shared api package

--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -23,7 +23,6 @@ Flag library-only
 library
   hs-source-dirs:      src
   exposed-modules:
-    Profile.Live.Server.API
     Profile.Live.Server.Application
     Profile.Live.Server.Config
     Profile.Live.Server.Config.Database
@@ -34,6 +33,7 @@ library
     , aeson >= 0.11 && < 0.12
     , bytestring >= 0.10 && < 0.11
     , file-embed >= 0.0.10 && < 0.1
+    , live-profile-server-api == 0.1.0.0
     , monad-logger >= 0.3 && < 0.4
     , persistent-postgresql >= 2.2 && < 2.6
     , text >= 1.2 && < 1.3
