Add servant dep and readme/changelog files

--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -10,12 +10,15 @@ maintainer:          ncrashed@gmail.com
 copyright:           (c) 2016 Anton Gushcha
 category:            Web
 build-type:          Simple
--- extra-source-files:
+extra-source-files:
+  README.md 
+  CHANGELOG.md
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     
+    Profile.Live.Server.API
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
