--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -11,7 +11,10 @@ copyright:           2016 Anton Gushcha
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
-
+extra-source-files:
+  README.md 
+  CHANGELOG.md
+  
 Flag dev
     Description:   Turn on development settings, like auto-reload templates.
     Default:       False
@@ -29,17 +32,23 @@ library
     Profile.Live.Server.Utils.DeriveJson
   default-language:    Haskell2010
   build-depends:       
-      base >= 4.7 && < 5
-    , aeson >= 0.11 && < 0.12
-    , bytestring >= 0.10 && < 0.11
-    , file-embed >= 0.0.10 && < 0.1
+      base                    >= 4.7      && < 5
+    , aeson                   >= 0.11     && < 0.12
+    , bytestring              >= 0.10     && < 0.11
+    , file-embed              >= 0.0.10   && < 0.1
     , live-profile-server-api == 0.1.0.0
-    , monad-logger >= 0.3 && < 0.4
-    , persistent-postgresql >= 2.2 && < 2.6
-    , text >= 1.2 && < 1.3
-    , wai >= 3.2 && < 3.3
-    , wai-extra >= 3.0 && < 3.1
-    , yaml >= 0.8 && < 0.9
+    , monad-logger            >= 0.3      && < 0.4
+    , persistent-postgresql   >= 2.2      && < 2.6
+    , servant                 >= 0.7      && < 0.8
+    , servant-auth-token      >= 0.1.1    && <= 0.2
+    , servant-auth-token-api  >= 0.1      && <= 0.2
+    , servant-server          >= 0.7      && < 0.8
+    , servant-swagger         >= 1.0      && < 1.1
+    , swagger2                >= 2.0      && < 2.1
+    , text                    >= 1.2      && < 1.3
+    , wai                     >= 3.2      && < 3.3
+    , wai-extra               >= 3.0      && < 3.1
+    , yaml                    >= 0.8      && < 0.9
 
   default-extensions:
     DataKinds
@@ -63,12 +72,17 @@ library
     ghc-options:   -Wall -fwarn-tabs -O2
 
 executable live-profile-server
+  if flag(library-only)
+    Buildable: False
+
   hs-source-dirs:      app
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:
       base >= 4.7 && < 5
     , live-profile-server-backend
+    
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
 
 test-suite live-profile-test
   type:              exitcode-stdio-1.0
