--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -19,8 +19,31 @@ library
   hs-source-dirs:      src
   exposed-modules:     
     Profile.Live.Server.API
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       
+      base                    >= 4.7      && < 5
+    , aeson                   >= 0.11     && < 0.12
+    , bytestring              >= 0.10     && < 0.11
+    , lens                    >= 4.13     && < 4.14
+    , servant                 >= 0.7      && < 0.8
+    , servant-auth-token-api  >= 0.1      && < 0.2
+    , servant-js              >= 0.7      && < 0.8
+    , servant-swagger         >= 1.0      && < 1.1
+    , swagger2                >= 2.0      && < 2.1
+    
   default-language:    Haskell2010
+  default-extensions:
+    DataKinds
+    DeriveGeneric
+    FlexibleInstances
+    GeneralizedNewtypeDeriving
+    KindSignatures
+    OverloadedStrings
+    RankNTypes
+    ScopedTypeVariables
+    TemplateHaskell
+    TypeFamilies
+    TypeOperators
+    TypeSynonymInstances
 
 source-repository head
   type:     git
