--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -84,10 +84,17 @@ executable live-profile-server
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:
-      base >= 4.7 && < 5
+      base                          >= 4.7      && < 5
+    , live-profile-server-api
     , live-profile-server-backend
+    , optparse-applicative          >= 0.12     && < 0.13
+    , persistent-postgresql         >= 2.2      && < 2.3
+    , wai-cors                      >= 0.2      && < 0.3
+    , warp                          >= 3.2      && < 3.3
     
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+    RecordWildCards
 
 test-suite live-profile-test
   type:              exitcode-stdio-1.0
