Add missing field in config

--- a/live-profile-server-backend/config/config.yaml
+++ b/live-profile-server-backend/config/config.yaml
@@ -1,9 +1,20 @@
 # Values formatted like "_env:ENV_VAR_NAME:default_value" can be overridden by the specified environment variable.
+environment: Development
 
 database:
   database: "_env:POSTGRES_DB:postgres"
   host: "_env:POSTGRES_PORT_5432_TCP_ADDR:localhost"
   port: "_env:POSTGRES_PORT_5432_TCP_PORT:5432"
   user: "_env:POSTGRES_USER:postgres"
-  password: "_env:POSTGRES_PASSWORD:123456"
+  password: "_env:POSTGRES_PASSWORD:'123456'"
   poolSize: "_env:POSTGRES_POOL_SIZE:8"
+
+auth:
+  expire: 600
+  restoreExpire: 10000
+  passwordsStrength: 17
+  passwordMinLength: 8
+  pageSize: 50
+
+static: "./static"
+port: 3000
