--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -34,6 +34,7 @@ library
     , reflex-dom            >= 0.3      && < 0.4
     , servant               >= 0.7      && < 0.8
     , servant-swagger       >= 1.0      && < 1.1
+    , shine                 >= 0.1      && < 0.2
     , swagger2              >= 2.0      && < 2.1
     , text                  >= 1.2      && < 1.3
     , transformers          >= 0.4      && < 0.5
@@ -60,7 +61,7 @@ executable fitclubs-frontend-output
   ghc-options:         -Wall
   build-depends:       base
                      , ghcjs-base
-                     , fitclubs-frontend
+                     , live-profile-server-frontend
   default-language:    Haskell2010
 
 source-repository head
