--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -59,9 +59,13 @@ executable fitclubs-frontend-output
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall
-  build-depends:       base
-                     , ghcjs-base
-                     , live-profile-server-frontend
+  build-depends:       
+      base
+    , ghcjs-base                     >= 0.2      && < 0.3
+    , ghcjs-dom                      >= 0.2      && < 0.3
+    , live-profile-server-frontend
+    , shine                          >= 0.1      && < 0.2
+
   default-language:    Haskell2010
 
 source-repository head
