--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -26,6 +26,7 @@ library
     , containers            >= 0.5      && < 0.6
     , data-default          >= 0.5      && < 0.6
     , dependent-map         >= 0.2      && < 0.3
+    , diagrams-reflex       >= 0.1      && < 0.2
     , either                >= 4.4      && < 4.5
     , ghcjs-base            >= 0.2      && < 0.3
     , ghcjs-servant-client  >= 1.1.1    && < 1.2
@@ -34,7 +35,6 @@ library
     , reflex-dom            >= 0.3      && < 0.4
     , servant               >= 0.7      && < 0.8
     , servant-swagger       >= 1.0      && < 1.1
-    , shine                 >= 0.1      && < 0.2
     , swagger2              >= 2.0      && < 2.1
     , text                  >= 1.2      && < 1.3
     , transformers          >= 0.4      && < 0.5
@@ -61,10 +61,13 @@ executable fitclubs-frontend-output
   ghc-options:         -Wall
   build-depends:       
       base
+    , diagrams-lib                   >= 1.3      && < 1.4
+    , diagrams-reflex                >= 0.1      && < 0.2
     , ghcjs-base                     >= 0.2      && < 0.3
     , ghcjs-dom                      >= 0.2      && < 0.3
+    , reflex                         >= 0.4      && < 0.5
+    , reflex-dom                     >= 0.3      && < 0.4
     , live-profile-server-frontend
-    , shine                          >= 0.1      && < 0.2
 
   default-language:    Haskell2010
 
