--- a/live-profile-server-backend/stack.yaml
+++ b/live-profile-server-backend/stack.yaml
@@ -37,6 +37,9 @@ resolver: lts-6.10
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+- '../live-profile-server-api'
+- '../live-profile-server-frontend'
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
