--- a/live-profile-server-frontend/stack.yaml
+++ b/live-profile-server-frontend/stack.yaml
@@ -15,6 +15,8 @@ allow-newer: true
 
 packages:
 - '.'
+- '../live-profile-server-api'
+- '../live-profile-server-backend'
 - location:
     git: https://github.com/ryantrinkle/reflex.git
     commit: f8338f6b68c9be4e8dcddbbab2098aeffa018535
