--- a/stack.yaml
+++ b/stack.yaml
@@ -38,6 +38,7 @@ resolver: lts-6.10
 packages:
 - 'live-profile-server-api'
 - 'live-profile-server-backend'
+- 'live-profile-server-frontend'
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
