Print stack version in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ image-build:
   script:
     # rm cache 
     #- stack clean 
-  
+    - stack --version 
+    
     # workournd a centos SSL bug 
     - export NSS_DISABLE_HW_AES=1 
     
