--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -19,17 +19,22 @@ library
   hs-source-dirs:      src
   exposed-modules:     
     Profile.Live.Server.API
+    Profile.Live.Server.API.Connection
   build-depends:       
       base                    >= 4.7      && < 5
     , aeson                   >= 0.11     && < 0.12
+    , aeson-injector          >= 1.0.4    && < 1.1
     , bytestring              >= 0.10     && < 0.11
     , lens                    >= 4.13     && < 4.14
     , servant                 >= 0.7      && < 0.8
-    , servant-auth-token-api  >= 0.1      && < 0.2
+    , servant-auth-token-api  >= 0.2      && < 0.3
     , servant-js              >= 0.7      && < 0.8
     , servant-swagger         >= 1.0      && < 1.1
     , swagger2                >= 2.0      && < 2.1
-    
+    , text                    >= 1.2      && < 1.3 
+    , time                    >= 1.5      && < 1.6
+    , vinyl                   >= 0.5.2    && < 0.6
+
   default-language:    Haskell2010
   default-extensions:
     DataKinds
