--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -46,7 +46,7 @@ library
     , persistent              >= 2.2      && < 2.3
     , persistent-postgresql   >= 2.2      && < 2.6
     , servant                 >= 0.7      && < 0.8
-    , servant-auth-token      >= 0.1.1    && <= 0.2
+    , servant-auth-token      >= 0.2      && < 0.3
     , servant-server          >= 0.7      && < 0.8
     , servant-swagger         >= 1.0      && < 1.1
     , swagger2                >= 2.0      && < 2.1
