--- a/stack.yaml
+++ b/stack.yaml
@@ -38,13 +38,16 @@ resolver: lts-6.10
 packages:
 - 'live-profile-server-api'
 - 'live-profile-server-backend'
+- '../../servant-auth-token'
+- '../../servant-auth-token-api'
+- '../../aeson-injector'
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- aeson-injector-1.0.3.0
-- servant-auth-token-0.1.1.0
-- servant-auth-token-api-0.1.2.0
+- aeson-injector-1.0.4.0
+- servant-auth-token-0.2.0.0
+- servant-auth-token-api-0.2.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
