--- a/live-profile-server-frontend/stack.yaml
+++ b/live-profile-server-frontend/stack.yaml
@@ -16,6 +16,7 @@ allow-newer: true
 packages:
 - '.'
 - '../live-profile-server-api'
+- '../servant-rest-derive'
 - location:
     git: https://github.com/ryantrinkle/reflex.git
     commit: f8338f6b68c9be4e8dcddbbab2098aeffa018535
