--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -1,8 +1,8 @@
-name:                live-profile-server-api
+name:                servant-rest-derive
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Semi automatic utilities to derive RESTful APIs for servant
 description:         Please see README.md
-homepage:            https://github.com/NCrashed/live-profile-server#readme
+homepage:            https://github.com/NCrashed/servant-rest-derive#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Anton Gushcha
@@ -17,23 +17,14 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     
-    Profile.Live.Server.API
-    Profile.Live.Server.API.Connection
+  exposed-modules:
+    Servant.API.REST.Derive
   build-depends:       
-      base                    >= 4.7      && < 5
-    , aeson                   >= 0.11     && < 1.1
+      base >= 4.7 && < 5
+    , aeson                   >= 0.11     && < 0.12
     , aeson-injector          >= 1.0.4    && < 1.1
-    , bytestring              >= 0.10     && < 0.11
-    , lens                    >= 4.13     && < 4.14
     , servant                 >= 0.7      && < 0.8
     , servant-auth-token-api  >= 0.2      && < 0.3
-    , servant-js              >= 0.7      && < 0.8
-    , servant-rest-derive     >= 0.1      && < 0.2
-    , servant-swagger         >= 1.0      && < 1.1
-    , swagger2                >= 2.0      && < 2.1
-    , text                    >= 1.2      && < 1.3 
-    , time                    >= 1.5      && < 1.6
     , vinyl                   >= 0.5.2    && < 0.6
 
   default-language:    Haskell2010
@@ -53,4 +44,4 @@ library
 
 source-repository head
   type:     git
-  location: https://github.com/NCrashed/live-profile-server
+  location: https://github.com/NCrashed/servant-rest-derive
