--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -19,18 +19,25 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Servant.API.REST.Derive
+    Servant.API.REST.Derive.Named
+    Servant.API.REST.Derive.Vinyl
   build-depends:       
       base >= 4.7 && < 5
-    , aeson                   >= 0.11     && < 0.12
-    , aeson-injector          >= 1.0.4    && < 1.1
-    , servant                 >= 0.7      && < 0.8
-    , servant-auth-token-api  >= 0.2      && < 0.3
-    , vinyl                   >= 0.5.2    && < 0.6
+    , aeson                     >= 0.11     && < 1.1
+    , aeson-injector            >= 1.0.4    && < 1.1
+    , lens                      >= 4.13     && < 4.14
+    , servant                   >= 0.7      && < 0.8
+    , servant-auth-token-api    >= 0.2      && < 0.3
+    , swagger2                  >= 2.0      && < 2.2
+    , text                      >= 1.2      && < 1.3
+    , unordered-containers      >= 0.2      && < 0.3
+    , vinyl                     >= 0.5.2    && < 0.6
 
   default-language:    Haskell2010
   default-extensions:
     DataKinds
     DeriveGeneric
+    FlexibleContexts
     FlexibleInstances
     GeneralizedNewtypeDeriving
     KindSignatures
@@ -41,6 +48,7 @@ library
     TypeFamilies
     TypeOperators
     TypeSynonymInstances
+    UndecidableInstances
 
 source-repository head
   type:     git
