--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -27,6 +27,7 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Profile.Live.Server.Application
+    Profile.Live.Server.Application.Connection
     Profile.Live.Server.Config
     Profile.Live.Server.Config.Auth
     Profile.Live.Server.Config.Database
@@ -36,24 +37,25 @@ library
     Profile.Live.Server.Utils.DeriveJson
   default-language:    Haskell2010
   build-depends:       
-      base                    >= 4.7      && < 5
-    , aeson                   >= 0.11     && < 1.1
-    , bytestring              >= 0.10     && < 0.11
-    , file-embed              >= 0.0.10   && < 0.1
-    , live-profile-server-api == 0.1.0.0
-    , monad-logger            >= 0.3      && < 0.4
-    , mtl                     >= 2.2      && < 2.3
-    , persistent              >= 2.2      && < 2.3
-    , persistent-postgresql   >= 2.2      && < 2.6
-    , servant                 >= 0.7      && < 0.8
-    , servant-auth-token      >= 0.2      && < 0.3
-    , servant-server          >= 0.7      && < 0.8
-    , servant-swagger         >= 1.0      && < 1.1
-    , swagger2                >= 2.0      && < 2.2
-    , text                    >= 1.2      && < 1.3
-    , wai                     >= 3.2      && < 3.3
-    , wai-extra               >= 3.0      && < 3.1
-    , yaml                    >= 0.8      && < 0.9
+      base                        >= 4.7      && < 5
+    , aeson                       >= 0.11     && < 1.1
+    , bytestring                  >= 0.10     && < 0.11
+    , file-embed                  >= 0.0.10   && < 0.1
+    , live-profile-server-api     == 0.1.0.0
+    , monad-logger                >= 0.3      && < 0.4
+    , mtl                         >= 2.2      && < 2.3
+    , persistent                  >= 2.2      && < 2.3
+    , persistent-postgresql       >= 2.2      && < 2.6
+    , servant                     >= 0.7      && < 0.8
+    , servant-auth-token          >= 0.2      && < 0.3
+    , servant-rest-derive-server  >= 0.1      && < 0.2
+    , servant-server              >= 0.7      && < 0.8
+    , servant-swagger             >= 1.0      && < 1.1
+    , swagger2                    >= 2.0      && < 2.2
+    , text                        >= 1.2      && < 1.3
+    , wai                         >= 3.2      && < 3.3
+    , wai-extra                   >= 3.0      && < 3.1
+    , yaml                        >= 0.8      && < 0.9
 
   default-extensions:
     DataKinds
