--- a/live-profile-server-backend/stack.yaml
+++ b/live-profile-server-backend/stack.yaml
@@ -39,6 +39,7 @@ packages:
 - '.'
 - '../live-profile-server-api'
 - '../servant-rest-derive'
+- '../servant-rest-derive-server'
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
