--- a/servant-rest-derive-server/servant-rest-derive-server.cabal
+++ b/servant-rest-derive-server/servant-rest-derive-server.cabal
@@ -23,7 +23,10 @@ library
       base >= 4.7 && < 5
     , aeson                     >= 0.11     && < 1.1
     , aeson-injector            >= 1.0.4    && < 1.1
+    , bytestring                >= 0.10     && < 0.11
     , lens                      >= 4.13     && < 4.14
+    , mtl                       >= 2.2      && < 2.3
+    , persistent                >= 2.2      && < 2.3
     , servant                   >= 0.7      && < 0.8
     , servant-auth-token        >= 0.2      && < 0.3
     , servant-auth-token-api    >= 0.2      && < 0.3
@@ -33,7 +36,7 @@ library
     , text                      >= 1.2      && < 1.3
     , unordered-containers      >= 0.2      && < 0.3
     , vinyl                     >= 0.5.2    && < 0.6
-
+    
   default-language:    Haskell2010
   default-extensions:
     DataKinds
