--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -26,13 +26,14 @@ library
     , aeson                     >= 0.11     && < 1.1
     , aeson-injector            >= 1.0.4    && < 1.1
     , lens                      >= 4.13     && < 4.14
+    , path-pieces               >= 0.2      && < 0.3
     , servant                   >= 0.7      && < 0.8
     , servant-auth-token-api    >= 0.2      && < 0.3
     , swagger2                  >= 2.0      && < 2.2
     , text                      >= 1.2      && < 1.3
     , unordered-containers      >= 0.2      && < 0.3
     , vinyl                     >= 0.5.2    && < 0.6
-
+    
   default-language:    Haskell2010
   default-extensions:
     DataKinds
