--- a/servant-rest-derive-server/servant-rest-derive-server.cabal
+++ b/servant-rest-derive-server/servant-rest-derive-server.cabal
@@ -38,9 +38,10 @@ library
     , servant-server            >= 0.7      && < 0.8
     , swagger2                  >= 2.0      && < 2.2
     , text                      >= 1.2      && < 1.3
+    , transformers              >= 0.4      && < 0.5
     , unordered-containers      >= 0.2      && < 0.3
     , vinyl                     >= 0.5.2    && < 0.6
-
+    
     -- , template-haskell
     -- , persistent-template
   default-language:    Haskell2010
