--- a/servant-rest-derive-server/servant-rest-derive-server.cabal
+++ b/servant-rest-derive-server/servant-rest-derive-server.cabal
@@ -41,9 +41,9 @@ library
     , transformers              >= 0.4      && < 0.5
     , unordered-containers      >= 0.2      && < 0.3
     , vinyl                     >= 0.5.2    && < 0.6
-    
-    -- , template-haskell
-    -- , persistent-template
+
+    , template-haskell
+    , persistent-template
   default-language:    Haskell2010
   default-extensions:
     DataKinds
