Implement automatic patch method

--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -43,6 +43,7 @@ library
     FlexibleInstances
     GeneralizedNewtypeDeriving
     KindSignatures
+    MultiParamTypeClasses
     OverloadedStrings
     RankNTypes
     ScopedTypeVariables
@@ -50,6 +51,7 @@ library
     TypeFamilies
     TypeOperators
     TypeSynonymInstances
+    UndecidableInstances
 
 source-repository head
   type:     git
