--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -43,6 +43,7 @@ library
     FlexibleInstances
     GeneralizedNewtypeDeriving
     KindSignatures
+    MultiParamTypeClasses
     OverloadedStrings
     RankNTypes
     ScopedTypeVariables
