--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -21,6 +21,7 @@ library
     Servant.API.REST.Derive
     Servant.API.REST.Derive.Named
     Servant.API.REST.Derive.Patch
+    Servant.API.REST.Derive.TH
     Servant.API.REST.Derive.Vinyl
   build-depends:       
       base >= 4.7 && < 5
@@ -31,6 +32,7 @@ library
     , servant                   >= 0.7      && < 0.8
     , servant-auth-token-api    >= 0.2      && < 0.3
     , swagger2                  >= 2.0      && < 2.2
+    , template-haskell          >= 2.10     && < 2.11
     , text                      >= 1.2      && < 1.3
     , unordered-containers      >= 0.2      && < 0.3
     , vinyl                     >= 0.5.2    && < 0.6
