--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -20,6 +20,7 @@ library
   exposed-modules:     
     Profile.Live.Server.API
     Profile.Live.Server.API.Connection
+    Profile.Live.Server.API.Session
   build-depends:       
       base                    >= 4.7      && < 5
     , aeson                   >= 0.11     && < 1.1
