--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-6.10
+resolver: nightly-2016-08-12
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -48,7 +48,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - aeson-injector-1.0.4.0
-- servant-auth-token-0.2.0.0
+- servant-auth-token-0.2.0.1
 - servant-auth-token-api-0.2.0.0
 
 # Override default flag values for local packages and extra-deps
