--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ image-build:
     # workournd a centos SSL bug 
     - export NSS_DISABLE_HW_AES=1 
     - export PATH=/home/gitlab-runner/.local/bin:$PATH
+    - stack setup
     - stack install happy alex 
 
     # build server
