--- a/live-profile-server-backend/stack.yaml
+++ b/live-profile-server-backend/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-6.10
+resolver: nightly-2016-08-12
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
