--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -54,10 +54,11 @@ library
     , servant-swagger             >= 1.0      && < 1.2
     , swagger2                    >= 2.0      && < 2.2
     , text                        >= 1.2      && < 1.3
+    , unordered-containers        >= 0.2.7    && < 0.3
     , wai                         >= 3.2      && < 3.3
     , wai-extra                   >= 3.0      && < 3.1
     , yaml                        >= 0.8      && < 0.9
-
+    
   default-extensions:
     DataKinds
     DeriveGeneric
