--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -49,11 +49,13 @@ library
     , persistent-postgresql       >= 2.2      && < 2.6
     , servant                     >= 0.7      && < 0.8
     , servant-auth-token          >= 0.2      && < 0.3
+    , servant-rest-derive         >= 0.1      && < 0.2
     , servant-rest-derive-server  >= 0.1      && < 0.2
     , servant-server              >= 0.7      && < 0.8
     , servant-swagger             >= 1.0      && < 1.2
     , swagger2                    >= 2.0      && < 2.2
     , text                        >= 1.2      && < 1.3
+    , time                        >= 1.6      && < 1.7
     , unordered-containers        >= 0.2.7    && < 0.3
     , wai                         >= 3.2      && < 3.3
     , wai-extra                   >= 3.0      && < 3.1
