--- a/servant-rest-derive/servant-rest-derive.cabal
+++ b/servant-rest-derive/servant-rest-derive.cabal
@@ -27,6 +27,7 @@ library
       base >= 4.7 && < 5
     , aeson                     >= 0.11     && < 1.1
     , aeson-injector            >= 1.0.4    && < 1.1
+    , hashable                  >= 1.2      && < 1.3
     , insert-ordered-containers >= 0.1      && < 0.2
     , lens                      >= 4.13     && < 4.15
     , path-pieces               >= 0.2      && < 0.3
