--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -41,6 +41,7 @@ library
   build-depends:       
       base                        >= 4.7      && < 5
     , aeson                       >= 0.11     && < 1.1
+    , aeson-injector              >= 1.0.5.1  && < 1.1
     , bytestring                  >= 0.10     && < 0.11
     , fast-logger                 >= 2.4      && < 2.5
     , file-embed                  >= 0.0.10   && < 0.1
