Bind eventlog to session

--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -28,6 +28,7 @@ library
   exposed-modules:
     Profile.Live.Server.Application
     Profile.Live.Server.Application.Connection
+    Profile.Live.Server.Application.EventLog
     Profile.Live.Server.Application.Session
     Profile.Live.Server.Config
     Profile.Live.Server.Config.Auth
