--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -20,6 +20,7 @@ library
   exposed-modules:     
     Profile.Live.Server.API
     Profile.Live.Server.API.Connection
+    Profile.Live.Server.API.EventLog
     Profile.Live.Server.API.Session
     Profile.Live.Server.Events
   build-depends:       
