--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -20,12 +20,14 @@ library
   ghc-options:         -Wall
   exposed-modules:     
     Profile.Live.Server.Client
+    Profile.Live.Server.Client.Bined
   build-depends:       
       base                  >= 4.7      && < 5
     , aeson                 >= 0.9      && < 0.12
     , containers            >= 0.5      && < 0.6
     , data-default          >= 0.5      && < 0.6
     , dependent-map         >= 0.2      && < 0.3
+    , diagrams-lib          >= 1.3      && < 1.4
     , diagrams-reflex       >= 0.1      && < 0.2
     , either                >= 4.4      && < 4.5
     , ghcjs-base            >= 0.2      && < 0.3
@@ -38,7 +40,8 @@ library
     , swagger2              >= 2.0      && < 2.1
     , text                  >= 1.2      && < 1.3
     , transformers          >= 0.4      && < 0.5
-    
+    , vector                >= 0.11     && < 0.12
+
   default-language:    Haskell2010
   default-extensions:
     DataKinds
