--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -20,10 +20,13 @@ library
   ghc-options:         -Wall
   exposed-modules:     
     Profile.Live.Server.Client
+    Profile.Live.Server.Client.Async
     Profile.Live.Server.Client.Bined
+    Profile.Live.Server.Client.Connection
   build-depends:       
       base                  >= 4.7      && < 5
     , aeson                 >= 0.9      && < 0.12
+    , aeson-injector        >= 1.0.4    && < 1.1
     , containers            >= 0.5      && < 0.6
     , data-default          >= 0.5      && < 0.6
     , dependent-map         >= 0.2      && < 0.3
@@ -33,15 +36,19 @@ library
     , ghcjs-base            >= 0.2      && < 0.3
     , ghcjs-servant-client  >= 1.1.1    && < 1.2
     , lens                  >= 4.13     && < 4.14
+    , live-profile-server-api >= 0.1    && < 0.2
     , reflex                >= 0.4      && < 0.5
     , reflex-dom            >= 0.3      && < 0.4
     , servant               >= 0.7      && < 0.8
+    , servant-auth-token-api >= 0.2     && < 0.3
+    , servant-rest-derive   >= 0.1      && < 0.2
     , servant-swagger       >= 1.0      && < 1.1
     , swagger2              >= 2.0      && < 2.1
     , text                  >= 1.2      && < 1.3
     , transformers          >= 0.4      && < 0.5
     , vector                >= 0.11     && < 0.12
-
+    , vinyl                 >= 0.5      && < 0.6
+    
   default-language:    Haskell2010
   default-extensions:
     DataKinds
@@ -72,7 +79,9 @@ executable fitclubs-frontend-output
     , reflex-dom                     >= 0.3      && < 0.4
     , text                           >= 1.2      && < 1.3
     , vector                         >= 0.11     && < 0.12
+    , vinyl                          >= 0.5.2    && < 0.6
     , live-profile-server-frontend
+    , live-profile-server-api        >= 0.1      && < 0.2
 
   default-language:    Haskell2010
   default-extensions:
