--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -21,6 +21,7 @@ library
   exposed-modules:     
     Profile.Live.Server.Client
     Profile.Live.Server.Client.Async
+    Profile.Live.Server.Client.Auth
     Profile.Live.Server.Client.Bined
     Profile.Live.Server.Client.Connection
   build-depends:       
@@ -48,7 +49,7 @@ library
     , transformers          >= 0.4      && < 0.5
     , vector                >= 0.11     && < 0.12
     , vinyl                 >= 0.5      && < 0.6
-    
+
   default-language:    Haskell2010
   default-extensions:
     DataKinds
