--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -74,6 +74,7 @@ executable fitclubs-frontend-output
   ghc-options:         -Wall
   build-depends:       
       base
+    , aeson-injector                 >= 1.0      && < 1.1
     , diagrams-lib                   >= 1.3      && < 1.4
     , diagrams-reflex                >= 0.1      && < 0.2
     , ghcjs-base                     >= 0.2      && < 0.3
@@ -85,7 +86,9 @@ executable fitclubs-frontend-output
     , vinyl                          >= 0.5.2    && < 0.6
     , live-profile-server-frontend
     , live-profile-server-api        >= 0.1      && < 0.2
-
+    , servant-rest-derive            >= 0.1      && < 0.2
+    , servant-auth-token-api         >= 0.2      && < 0.3
+    
   default-language:    Haskell2010
   default-extensions:
     RecordWildCards
