--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -28,6 +28,8 @@ library
     Profile.Live.Server.Client.Bootstrap.Modal
     Profile.Live.Server.Client.Connection
     Profile.Live.Server.Client.Pagination
+    Profile.Live.Server.Client.Router
+    Profile.Live.Server.Client.Session
   build-depends:       
       base                  >= 4.7      && < 5
     , aeson                 >= 0.9      && < 0.12
@@ -50,6 +52,7 @@ library
     , servant-swagger       >= 1.0      && < 1.1
     , swagger2              >= 2.0      && < 2.1
     , text                  >= 1.2      && < 1.3
+    , time                  >= 1.5      && < 1.6
     , transformers          >= 0.4      && < 0.5
     , vector                >= 0.11     && < 0.12
     , vinyl                 >= 0.5      && < 0.6
