--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -27,6 +27,7 @@ library
     Profile.Live.Server.Client.Bootstrap.Button
     Profile.Live.Server.Client.Bootstrap.Modal
     Profile.Live.Server.Client.Connection
+    Profile.Live.Server.Client.EventLog
     Profile.Live.Server.Client.Pagination
     Profile.Live.Server.Client.Router
     Profile.Live.Server.Client.Session
