--- a/live-profile-server-api/live-profile-server-api.cabal
+++ b/live-profile-server-api/live-profile-server-api.cabal
@@ -28,6 +28,7 @@ library
     , aeson                   >= 0.11     && < 1.1
     , aeson-injector          >= 1.0.4    && < 1.1
     , bytestring              >= 0.10     && < 0.11
+    , ghc-events              >= 0.5      && < 0.6
     , lens                    >= 4.13     && < 4.15
     , servant                 >= 0.7      && < 0.8
     , servant-auth-token-api  >= 0.2      && < 0.3
@@ -38,7 +39,7 @@ library
     , text                    >= 1.2      && < 1.3 
     , time                    >= 1.5      && < 1.7
     , vinyl                   >= 0.5.2    && < 0.6
-
+    
   default-language:    Haskell2010
   default-extensions:
     DataKinds
