--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -44,6 +44,7 @@ library
       base                        >= 4.7      && < 5
     , aeson                       >= 0.11     && < 1.1
     , aeson-injector              >= 1.0.5.1  && < 1.1
+    , binary                      >= 0.7      && < 0.9
     , bytestring                  >= 0.10     && < 0.11
     , containers                  >= 0.5      && < 0.6
     , fast-logger                 >= 2.4      && < 2.5
