--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -25,6 +25,7 @@ library
     Profile.Live.Server.Client.Auth.Widget
     Profile.Live.Server.Client.Bined
     Profile.Live.Server.Client.Bootstrap.Button
+    Profile.Live.Server.Client.Bootstrap.Form
     Profile.Live.Server.Client.Bootstrap.Modal
     Profile.Live.Server.Client.Connection
     Profile.Live.Server.Client.EventLog
