--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -32,6 +32,7 @@ library
     Profile.Live.Server.Client.Pagination
     Profile.Live.Server.Client.Router
     Profile.Live.Server.Client.Session
+    Profile.Live.Server.Client.Utils
   build-depends:       
       base                  >= 4.7      && < 5
     , aeson                 >= 0.9      && < 0.12
