--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -27,8 +27,11 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Profile.Live.Server.Application
+    Profile.Live.Server.Application.Bined 
+    Profile.Live.Server.Application.Bined.Model
     Profile.Live.Server.Application.Connection
     Profile.Live.Server.Application.EventLog
+    Profile.Live.Server.Application.EventLog.Query
     Profile.Live.Server.Application.Session
     Profile.Live.Server.Config
     Profile.Live.Server.Config.Auth
@@ -38,7 +41,7 @@ library
     Profile.Live.Server.Models
     Profile.Live.Server.Monad
     Profile.Live.Server.Utils
-    Profile.Live.Server.Utils.DeriveJson
+
   default-language:    Haskell2010
   build-depends:       
       base                        >= 4.7      && < 5
@@ -46,7 +49,9 @@ library
     , aeson-injector              >= 1.0.5.1  && < 1.1
     , binary                      >= 0.7      && < 0.9
     , bytestring                  >= 0.10     && < 0.11
+    , colour                      >= 2.3      && < 2.4
     , containers                  >= 0.5      && < 0.6
+    , esqueleto                   >= 2.4.3    && < 2.5
     , fast-logger                 >= 2.4      && < 2.5
     , file-embed                  >= 0.0.10   && < 0.1
     , ghc-events                  >= 0.5      && < 0.6
@@ -59,6 +64,7 @@ library
     , persistent                  >= 2.2      && < 2.6
     , persistent-postgresql       >= 2.2      && < 2.6
     , persistent-template         >= 2.5      && < 2.6
+    , safe                        >= 0.3      && < 0.4
     , servant                     >= 0.7      && < 0.8
     , servant-auth-token          >= 0.2      && < 0.3
     , servant-auth-token-api      >= 0.2      && < 0.3
@@ -71,6 +77,7 @@ library
     , text                        >= 1.2      && < 1.3
     , time                        >= 1.6      && < 1.7
     , unordered-containers        >= 0.2.7    && < 0.3
+    , vector                      >= 0.11     && < 0.12
     , vinyl                       >= 0.5.2    && < 0.6
     , wai                         >= 3.2      && < 3.3
     , wai-extra                   >= 3.0      && < 3.1
