--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -37,6 +37,7 @@ library
       base                  >= 4.7      && < 5
     , aeson                 >= 0.9      && < 0.12
     , aeson-injector        >= 1.0.4    && < 1.1
+    , colour                >= 2.3      && < 2.4
     , containers            >= 0.5      && < 0.6
     , data-default          >= 0.5      && < 0.6
     , dependent-map         >= 0.2      && < 0.3
@@ -60,7 +61,7 @@ library
     , transformers          >= 0.4      && < 0.5
     , vector                >= 0.11     && < 0.12
     , vinyl                 >= 0.5      && < 0.6
-
+    
   default-language:    Haskell2010
   default-extensions:
     DataKinds
