Implement importing event log from file

--- a/live-profile-server-backend/config/config.yaml
+++ b/live-profile-server-backend/config/config.yaml
@@ -16,6 +16,11 @@ auth:
   passwordMinLength: 8
   pageSize: 50
 
+import: 
+  folder: "./import"
+  success: "./import/success"
+  failure: "./import/failure"
+
 static: "./static/"
 port: 3000
 pageSize: 50
