--- a/live-profile-test-app/live-profile-test-app.cabal
+++ b/live-profile-test-app/live-profile-test-app.cabal
@@ -19,4 +19,5 @@ executable live-profile-test-app
   ghc-options:         -eventlog -rtsopts -threaded
   build-depends:       
       base                    >= 4.7    && < 5
+    , async                   >= 2.1    && < 3
     , live-profile-leech      >= 0.1    && < 0.2
