Add config for uploading and prepare for implementation.

--- a/live-profile-server-backend/config/config.yaml
+++ b/live-profile-server-backend/config/config.yaml
@@ -21,6 +21,10 @@ import:
   success: "./import/success"
   failure: "./import/failure"
 
+upload:
+  folder: "./upload"
+  success: "./import"
+
 static: "./static/"
 port: 3000
 pageSize: 50
