--- a/live-profile-server-frontend/live-profile-server-frontend.cabal
+++ b/live-profile-server-frontend/live-profile-server-frontend.cabal
@@ -35,6 +35,7 @@ library
     Profile.Live.Server.Client.Router
     Profile.Live.Server.Client.Session
     Profile.Live.Server.Client.Upload
+    Profile.Live.Server.Client.Upload.Input
     Profile.Live.Server.Client.Utils
   build-depends:       
       base                  >= 4.7      && < 5
