Implement server side of upload API

--- a/stack.yaml
+++ b/stack.yaml
@@ -48,6 +48,7 @@ packages:
     - '.'
     - './live-profile-client'
     - './live-profile-protocol'
+    - './live-profile-leech'
 #- '../live-profile-monitor'
 #- '../live-profile-monitor/live-profile-client'
 #- '../live-profile-monitor/live-profile-protocol'
