--- a/live-profile-server-backend/live-profile-server-backend.cabal
+++ b/live-profile-server-backend/live-profile-server-backend.cabal
@@ -90,7 +90,7 @@ library
     , wai                         >= 3.2      && < 3.3
     , wai-extra                   >= 3.0      && < 3.1
     , yaml                        >= 0.8      && < 0.9
-    
+
   default-extensions:
     DataKinds
     DeriveGeneric
@@ -160,3 +160,4 @@ test-suite live-profile-test
       base
     , live-profile-server-backend
     , hspec >= 2.2
+    , QuickCheck >= 2.8
